# SimPhy

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_mac.sh  build_windows.bat  imgui.ini  run.bat  run_mac.sh  vcpkg.json
include/: Application.h  Camera.h  DebugWindow.h  Planet.h  Scene.h  UI.h  Window.h
src/: Application.cpp  Camera.cpp  Camera.h  DebugWindow.cpp  Icosphere.cpp  Icosphere.h  InputManager.cpp  InputManager.h  Planet.cpp  Planet.cpp.highres  RaymarchRenderer.cpp  RaymarchRenderer.h  Scene.cpp  Scene.cpp.new  Scene.h  SunSphere.cpp  SunSphere.h  UI.cpp  UIManager.cpp  UIManager.h  Window.cpp  icosphere.frag  icosphere.tesc  icosphere.tese  icosphere.vert  main.cpp  planet_mesh_gen.comp  planet_raymarch.frag  raymarch.frag  raymarch.vert  stb_image_write_full.h  tiny_obj_loader.cc
src/shaders/: atmosphere.frag  clouds.frag  planet.frag  planet.tesc  planet.tese  planet.vert  shadow.frag  shadow.vert  ship.frag  ship.vert  sun.frag  sun.vert
